<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/txtGrupo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txtGrupo"
        android:layout_alignParentLeft="true"
        android:text="@string/grupo" />

    <EditText
        android:id="@+id/txtModelo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtGrupo"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="22dp"
        android:ems="10"
        android:inputType="text" />

    <EditText
        android:id="@+id/txtMarca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtModelo"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="17dp"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtModelo"
        android:layout_alignBottom="@+id/txtModelo"
        android:layout_alignParentLeft="true"
        android:text="@string/modelo" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtMarca"
        android:layout_alignBottom="@+id/txtMarca"
        android:layout_alignParentLeft="true"
        android:text="@string/marca" />

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtMarca"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="24dp"
        android:text="@string/id" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtGrupo"
        android:layout_below="@+id/txtGrupo"
        android:layout_marginTop="39dp"
        android:text="@string/save" />

    <EditText
        android:id="@+id/txtId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TextView03"
        android:layout_alignBottom="@+id/TextView03"
        android:layout_alignParentRight="true"
        android:ems="10" />

</RelativeLayout>
